--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 /*HEADER SECTION:*/
 
 .headerImg {
-  /*background-attachment: fixed;*/
+  background-attachment: fixed;
   background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/13362/images/hero_full/Original_WW164138.jpg?1490292812);
-  background-repeat: no-repeat 50% 50%;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
   height: 510px;
   max-height: calc(70vh - 85px);
   min-height: 320px;
@@ -12,7 +12,6 @@
 }
 
 .headerImg div {
-
   background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
   opacity: 0.5;
   padding-bottom: 40px;
@@ -77,13 +76,15 @@
 
 button {
   background-color: #d55c19;
-  color: white;
+  border-radius: 2px;
+  color: #fff;
   font-size: 15px;
   margin-right: 5px;
   padding: 10px;
 }
 
 input {
+  border-radius: 2px;
   padding: 5px;
 }
 
@@ -91,26 +92,26 @@ input {
 
 
 /*BODY SECTION:*/
-
 .homepage {
   height:1000px;
   background-color: white;
 }
 
 .wrapper {
-  margin-bottom: 30px;
-  margin-top: 30px;
   background-color: red;
   height: 400px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   padding-left: 9vw;
   padding-right: 9vw;
 }
 
 .card-image1 {
   background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/13091/images/card_2_large/African_Crane_2.png?1485894315);
+  background-size: contain;
+  /*display: inline;*/
   height: 400px;
   width: 500px;
-  background-size: contain;
 
 }
 
