--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 .headerImg div {
   background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
   opacity: 0.5;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   padding-left: 10vw;
   padding-top: 400px;
 }
@@ -98,7 +98,7 @@ input {
 }
 
 .wrapper {
-  background-color: red;
+  /*background-color: red;*/
   height: 400px;
   margin-bottom: 30px;
   margin-top: 30px;
@@ -109,12 +109,18 @@ input {
 .card-image1 {
   background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/13091/images/card_2_large/African_Crane_2.png?1485894315);
   background-size: contain;
-  /*display: inline;*/
+  float:left;
   height: 400px;
   width: 500px;
-
 }
 
+.card-image2 {
+  background-color: black;
+  border-radius: 10px;
+  margin-left: 520px;
+  height: 400px;
+  width: 220px;
+}
 
 
 
