added hover to card1

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,12 @@
 }
 
 .headerImg div {
-  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
-  opacity: 0.5;
+  /*background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
+  opacity: 0.5;*/
   padding-bottom: 30px;
   padding-left: 10vw;
-  padding-top: 400px;
+  /*padding-top: 400px;*/
+  padding-top: 350px;
 }
 
 .headerImg h1,p {
@@ -88,7 +89,6 @@ input {
   padding: 5px;
 }
 
-}
 
 
 /*BODY SECTION:*/
@@ -114,6 +114,19 @@ input {
   background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/13091/images/card_2_large/African_Crane_2.png?1485894315);
   background-size: cover;
   height: 420px;
+
+  background-position: center;
+  transition: all 200ms ease-in-out;
+
+  width: 520px;
+}
+
+.card-image1:hover {
+  background-size: 110%;
+  background-position: center;
+  height: 420px;
+  background-transition: all 200ms ease-in-out;
+
   width: 520px;
 }
 
@@ -122,7 +135,7 @@ input {
   border-radius: 10px;
   height: 400px;
   margin-left: 30px;
-  position: absolute;
+  /*position: absolute;*/
   width: 280px;
 }
 
@@ -135,7 +148,7 @@ input {
   background-color: black;
   border-radius: 10px;
   height: 400px;
-  /*margin-left: 30px;*/
+  margin-left: 30px;
   /*position: relative;*/
   width: 280px;
 }
