--- a/styles.css
+++ b/styles.css
@@ -151,10 +151,13 @@ input {
   width: 280px;
 }
 
+/*"features and news" title section */
 .title {
   display: block;
   font-weight: bold;
   line-height: 40px;
+  margin-bottom: 80px;
+  margin-top: 80px;
   text-align: center;
 }
 
