--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,15 @@
 }
 
 .logo {
-  background-color: white;
+  background: url(https://www.worldwildlife.org/assets/structure/unique/logo-c562409bb6158bf64e5f8b1be066dbd5983d75f5ce7c9935a5afffbcc03f8e5d.png) no-repeat;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+  display: block;
   background-position: right;
   position:absolute;
-  margin-left: 8vw;
-  height: 110px;
+  margin-left: 8.4vw;
+  height: 120px;
   width: 100px;
+  z-index: 500;
 }
 
 .navbar {
