--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   min-height: 320px;
 }
 
+/*WORK ON, GRADIENT ON JUMBOTRON IMG:*/
 .headerImg div {
   /*background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
   opacity: 0.5;*/
@@ -90,6 +91,8 @@ input {
   border-radius: 2px;
   padding: 5px;
 }
+
+
 
 
 
