--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@
   opacity: 0.5;*/
   padding-bottom: 30px;
   padding-left: 10vw;
-  /*padding-top: 400px;*/
   padding-top: 350px;
 }
 
@@ -291,7 +290,20 @@ input {
   padding-top: 40px;
 }
 
+.card-image1b {
+  background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/13308/images/card_2_large/IMGL2810.jpg?1489600957);
+  border-radius: 10px;
+  height: 460px;
+  width: 580px;
+}
 
+.card-image2b {
+  background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/13329/images/card_2_large/112727.jpg?1489697704);
+  border-radius: 10px;
+  height: 460px;
+  margin-left: 10px;
+  width: 580px;
+}
 
 
 
