adding next section

--- a/styles.css
+++ b/styles.css
@@ -326,6 +326,12 @@ input {
   width: 580px;
 }
 
+.wwfmag {
+  background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/13078/images/card_4_large/IMG_0168_%2820%29_2.jpg?1485884410);
+  border-radius: 10px;
+  height: 460px;
+
+}
 
 
 
