--- a/styles.css
+++ b/styles.css
@@ -355,6 +355,9 @@ input {
 
 .accntbtn {
   background-color: black;
+  box-shadow: 1px 2px 4px rgba(0,0,0,0.3);
+  display: inline-block;
+  text-align: center;
 }
 
 
