fixed weight to width

--- a/styles.css
+++ b/styles.css
@@ -280,17 +280,20 @@ input {
   height: 425px;
   margin-left: 0;
   margin-top:590px;
-  width: 100vw;
+  /*width: 100vw;*/
 }
 
 .missionRow .title {
   padding-top: 40px;
 }
 
-.mission1 {
+#mission1 {
   background-image: url(https://www.worldwildlife.org/assets/content/goal-pillar-food-b1a57617056325546767a1a96ba6d3dcf2db6d7744f8fc54fe2a8a18c5dcdc73.jpg);
+  background-size: contain;
   background-repeat: no-repeat;
-  border-radius: 50%;
+  border-radius: 40px;
+  height: 80px;
+  width: 80px;
 }
 
 .hilight {
