added img links for mission pics

--- a/styles.css
+++ b/styles.css
@@ -287,11 +287,17 @@ input {
   padding-top: 40px;
 }
 
+.missionpics {
+  float: left;
+  text-align: center;
+}
+
 #missionpic {
   /*background-image: url(https://www.worldwildlife.org/assets/content/goal-pillar-food-b1a57617056325546767a1a96ba6d3dcf2db6d7744f8fc54fe2a8a18c5dcdc73.jpg);*/
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 40px;
+  /*float: left;*/
   height: 80px;
   width: 80px;
 }
