--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 }
 
 .headerImg h1,p {
-  color: rgba(255,255,255,1) ;
+  color: rgba(255,255,255,1);
   font-size: 20px;
 }
 
@@ -245,6 +245,12 @@ input {
   height: 460px;
   margin-left: 10px;
   width:280px;
+}
+
+#homepage-card-content p {
+  color: black;
+  padding: 30px;
+  text-align: center;
 }
 
 .card-image3a {
