--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,19 @@
 
 /*IN PROGRESS, GRADIENT ON JUMBOTRON IMG:*/
 .headerImg div {
-  /*background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
-  opacity: 0.5;*/
+  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
+  opacity: 0.5;
   padding-bottom: 30px;
   padding-left: 10vw;
-  padding-top: 350px;
+  padding-top: 300px;
 }
 
 .headerImg h1,p {
   color: rgba(255,255,255,1);
   font-size: 20px;
+}
+
+.hdr-text {
 }
 
 .logo {
