--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,9 @@
   padding-bottom: 50px;
 }
 
-/*IN PROGRESS, GRADIENT ON JUMBOTRON IMG:*/
+/*IN PROGRESS:*/
 .headerImg div {
+  /*CHECK OUT USING SCRIM INSTEAD*/
   background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
   opacity: 0.5;
   padding-bottom: 30px;
@@ -27,6 +28,7 @@
 }
 
 .hdr-text {
+  color: white;
 }
 
 .logo {
@@ -164,7 +166,6 @@ input {
 .card-content1 {
   padding-top: 30px;
   padding-left: 30px;
-
 }
 
 .card-image2 {
@@ -202,6 +203,7 @@ input {
 .card3hdr {
   font-size: 20px;
 }
+
 /*"features and news" title section */
 .title {
   display: block;
@@ -308,7 +310,6 @@ input {
 }
 
 #missionpic {
-  /*background-image: url(https://www.worldwildlife.org/assets/content/goal-pillar-food-b1a57617056325546767a1a96ba6d3dcf2db6d7744f8fc54fe2a8a18c5dcdc73.jpg);*/
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 50%;
@@ -345,6 +346,7 @@ input {
   margin-left: 10px;
   width: 580px;
 }
+
 
 
 .wwfmag {
