--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
-/*HEADER SECTION:*/
+button {
+  background-color: #d55c19;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 15px;
+  margin-right: 5px;
+  padding: 10px;
+}
 
+input {
+  border-radius: 2px;
+  padding: 5px;
+}
+
+/*HEADER SECTION:*/
 .headerImg {
   background: center;
   /*background-attachment: fixed;*/
@@ -79,20 +92,6 @@
   padding-top: 20px;
   position: absolute;
   right: 2vw;
-}
-
-button {
-  background-color: #d55c19;
-  border-radius: 2px;
-  color: #fff;
-  font-size: 15px;
-  margin-right: 5px;
-  padding: 10px;
-}
-
-input {
-  border-radius: 2px;
-  padding: 5px;
 }
 
 .congressButton {
@@ -288,7 +287,7 @@ input {
   width: 580px;
 }
 
-/*MISSION ROW SECTION*/
+/*Mid-body section; MISSION ROW */
 .missionRow {
   background: #f6f5f2;
   display: block;
@@ -356,6 +355,7 @@ input {
   width: 100%;
 }
 
+/*lower-body section*/
 .accntRow {
   background-image: url('https://c402277.ssl.cf1.rackcdn.com/photos/8985/images/magazine_medium/HI_23516.jpg?1432757253');
   display: block;
@@ -418,63 +418,4 @@ input {
   background: orange;
   color: white;
   display: inline-block;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*CSS RESET*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
 }
