edited button to be div

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-button {
+.button {
   background-color: #d55c19;
   border-radius: 2px;
   color: #fff;
+  display: inline-block;
   font-size: 15px;
   margin-right: 5px;
-  padding: 10px;
+  padding: 12px;
 }
 
 input {
