--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,8 @@
-.button {
-  background-color: #d55c19;
-  border-radius: 2px;
-  color: #fff;
-  display: inline-block;
-  font-size: 15px;
-  margin-right: 5px;
-  padding: 12px;
-}
 
 input {
   border-radius: 2px;
   padding: 5px;
+  /*margin-right: 5px;*/
 }
 
 /*HEADER SECTION:*/
@@ -98,6 +90,16 @@ input {
 .congressButton {
   padding: 10px 40px 10px 40px;
   margin-top: 10px;
+}
+
+.button {
+  background-color: #d55c19;
+  border-radius: 2px;
+  color: #fff;
+  display: inline-block;
+  font-size: 15px;
+  margin-right: 5px;
+  padding: 12px;
 }
 
 
