--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ input {
   box-shadow: 0 1px 3px rgba(0,0,0,0.08);
   display: block;
   height: 120px;
-  margin-left: 8.4vw;
+  margin-left: 7.9vw;
   position:absolute;
   width: 100px;
   z-index: 500;
@@ -88,6 +88,10 @@ input {
   padding-top: 20px;
   position: absolute;
   right: 2vw;
+}
+
+.search {
+  font-style: italic;
 }
 
 .congressButton {
@@ -148,8 +152,15 @@ input {
   letter-spacing: 1.5px;
   font-size: 20px;
   font-family: WWFRegular, Helvetica, Arial, sans-serif;
-  line-height: 1;
+  line-height: 1.4;
 
+}
+
+.action {
+  font-family: WWFRegular, Helvetica, Arial, sans-serif;
+
+  font-size: 24px;
+  margin-bottom: 30px;
 }
 
 /*ROW 1 CARDS*/
@@ -187,6 +198,8 @@ input {
   height: 460px;
   margin-left: 10px;
   width: 280px;
+  background-image: url(ss1.png);
+  background-size: contain;
 }
 
 .card-content2 {
